--- a/backend/air.toml
+++ b/backend/air.toml
@@ -7,7 +7,7 @@ tmp_dir = "tmp"
   bin = "./tmp/main"
   cmd = "go build -o ./tmp/main ."
   delay = 1000
-  exclude_dir = ["assets", "tmp", "vendor", "testdata", "frontend/node_modules", "frontend/src", "node_modules"]
+  exclude_dir = ["assets", "tmp", "vendor", "testdata", "frontend/node_modules", "frontend/src", "node_modules", "logs"]
   exclude_file = []
   exclude_regex = ["_test.go"]
   exclude_unchanged = false
