--- a/backend/api/openapi/api-v1.yaml
+++ b/backend/api/openapi/api-v1.yaml
@@ -5,13 +5,13 @@ info:
   version: 0.0.1
 
 servers:
-  - url: http:localhost:8080/api/v1
-  - description: dev url
+  - url: https://localhost:8080/api/v1
+    description: dev url
 paths:
   /users:
     get:
       summary: Get a list of users
-      paramaters:
+      parameters:
         - in: query
           name: page
           schema:
@@ -99,8 +99,6 @@ components:
         - email
         - password
         - status
-      optional:
-        - role
       properties:
         id:
           type: integer
