--- a/backend/api/openapi/api-v1.yaml
+++ b/backend/api/openapi/api-v1.yaml
@@ -5,7 +5,7 @@ info:
   version: 0.0.1
 
 servers:
-  - url: https://localhost:8080/api/v1
+  - url: http://localhost:8080/api/v1
     description: dev url
 paths:
   /users:
