--- a/frontend/open-source-erp/package.json
+++ b/frontend/open-source-erp/package.json
@@ -15,6 +15,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
+  "resolutions": {
+    "rollup": "npm:@rollup/wasm-node"
+  },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
