--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,8 @@
+GO_VERSION="1.21.4"
+
 GO_ENV="development"
 BASE_URL="http://localhost:"
 PORT=8080
 API_VERSION="v1"
-DB_URL="postgres://root:secret@localhost:5432/erp_go?sslmode=disable"
+DB_URL="postgres://root:secret@postgres:5432/erp_go?sslmode=disable"
+JWT_SECRET="secretsecretsecretsecretsecretsecretsecret"
