--- a/backend/api/openapi/api-v1.yaml
+++ b/backend/api/openapi/api-v1.yaml
@@ -27,6 +27,8 @@ paths:
   /users:
     get:
       summary: Get a list of users
+      security:
+        - bearerAuth: []
       parameters:
         - in: query
           name: offset
@@ -123,6 +125,11 @@ paths:
                 $ref: "#/components/schemas/ApiResponse"
 
 components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
   schemas:
     LoginUserRequest:
       type: object
@@ -148,9 +155,6 @@ components:
         - password
         - status
       properties:
-        id:
-          type: integer
-          format: int64
         username:
           type: string
           example: "johnsmith1"
@@ -185,12 +189,6 @@ components:
         role:
           type: string
           enum: [admin, user, manager]
-        createdAt:
-          type: string
-          format: date-time
-        updatedAt:
-          type: string
-          format: date-time
     UserResponse:
       type: object
       properties:
