--- a/frontend/open-source-erp/package.json
+++ b/frontend/open-source-erp/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.0"
+    "react-router-dom": "^6.21.0",
+    "yup": "^1.3.3"
   },
   "resolutions": {
     "rollup": "npm:@rollup/wasm-node"
