--- a/frontend/open-source-erp/package.json
+++ b/frontend/open-source-erp/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0",
+    "recoil": "^0.7.7",
     "yup": "^1.3.3"
   },
   "resolutions": {
