--- a/frontend/open-source-erp/package.json
+++ b/frontend/open-source-erp/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.15.0",
     "axios": "^1.6.2",
     "formik": "^2.4.5",
     "react": "^18.2.0",
