--- a/frontend/open-source-erp/package.json
+++ b/frontend/open-source-erp/package.json
@@ -25,6 +25,7 @@
     "rollup": "npm:@rollup/wasm-node"
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.1",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
