--- a/backend/api/openapi/api-v1.yaml
+++ b/backend/api/openapi/api-v1.yaml
@@ -14,6 +14,45 @@ servers:
   - url: http://localhost:8080/api/v1
     description: dev url
 paths:
+  /genders:
+    get:
+      tags:
+        - Genders
+      summary: List Available Gender Options
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: query
+          name: offset
+          schema:
+            type: integer
+            default: 0
+          description: Page number of the users list
+        - in: query
+          name: limit
+          schema:
+            type: integer
+            default: 10
+          description: Number of users per page
+      responses:
+        "200":
+          description: A list of genders
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/MultiGendersResponse"
+        "401":
+          description: Invalid token/user not authenticated.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/AuthorizationErrorResponse"
+        "400":
+          description: Bad Request.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BadRequestErrorResponse"
   /auth:
     post:
       tags:
@@ -229,6 +268,15 @@ components:
           example: "s3.amazon.com/myavatar.jpg"
           x-oapi-codegen-extra-tags:
             validate: string
+    GenderResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        genderName:
+          type: string
+          example: Male
     UserResponse:
       type: object
       properties:
@@ -253,8 +301,56 @@ components:
           example: "s3.amazon.com/myavatar.jpg"
         status:
           type: string
+          example: active
         role:
           type: string
+          example: user
+        dateOfBirth:
+          type: string
+          format: date-time
+        nationality:
+          type: string
+        dependents:
+          type: integer
+          format: int32
+          example: 3
+        emergencyContactName:
+          type: string
+          example: Jane Giblet
+        emergencyContactNumber:
+          type: integer
+          format: int32
+          example: 1231456987
+        emergencyContactAddress:
+          type: string
+          example: 123 Downing Street
+        departmentName:
+          type: string
+          example: Accounting
+        gender:
+          type: string
+          example: Male
+        maritalStatus:
+          type: string
+          example: Single
+        addressLine1:
+          type: string
+          example: 1 Downing Street
+        addressLine2:
+          type: string
+          example: E13
+        city:
+          type: string
+          example: London
+        state:
+          type: string
+          example: London
+        country:
+          type: string
+          example: UK
+        postalCode:
+          type: string
+          example: E13 9PB
         createdAt:
           type: string
           format: date-time
@@ -327,6 +423,19 @@ components:
           example: success
         data:
           $ref: "#/components/schemas/UserResponse"
+    MultiGendersResponse:
+      type: object
+      properties:
+        status:
+          type: integer
+          example: 200
+        message:
+          type: string
+          example: success
+        data:
+          type: array
+          items:
+            $ref: "#/components/schemas/GenderResponse"
     MultiUsersResponse:
       type: object
       properties:
