--- a/backend/api/openapi/api-v1.yaml
+++ b/backend/api/openapi/api-v1.yaml
@@ -14,6 +14,36 @@ servers:
   - url: http://localhost:8080/api/v1
     description: dev url
 paths:
+  /profiles:
+    put:
+      tags:
+        - Profiles
+      summary: Update User profiles
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/PutProfileRequest"
+      responses:
+        "201":
+          description: Profile Updated
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ApiResponse"
+        "401":
+          description: Not Authorized.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/AuthorizationErrorResponse"
+        "400":
+          description: Validation Errors.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BadRequestErrorResponse"
   /genders:
     get:
       tags:
@@ -228,7 +258,96 @@ components:
           example: "john.smith@email.com"
           x-oapi-codegen-extra-tags:
             validate: "min=8,matches=^[a-zA-Z0-9]*$"
-
+    PutProfileRequest:
+      type: object
+      required:
+        - id
+        - userId
+        - dateOfBirth
+        - nationality
+        - maritalStatusId
+        - addressLine1
+        - city
+        - country
+      properties:
+        id:
+          type: integer
+          format: int64
+          example: 1
+          x-oapi-codegen-extra-tags:
+            validate: numeric
+        userId:
+          type: integer
+          format: int64
+          example: 1
+          x-oapi-codegen-extra-tags:
+            validate: numeric
+        genderId:
+          type: integer
+          format: int64
+          example: 1
+          x-oapi-codegen-extra-tags:
+            validate: string
+        dateOfBirth:
+          type: string
+          format: date-time
+          example: "1990-01-01T00:00:00Z"
+        nationality:
+          type: string
+          example: "British"
+        maritalStatusId:
+          type: integer
+          format: int64
+          example: 1
+          x-oapi-codegen-extra-tags:
+            validate: numeric
+        dependents:
+          type: integer
+          format: int32
+          example: 2
+        emergencyContactId:
+          type: integer
+          format: int64
+          example: 1
+          x-oapi-codegen-extra-tags:
+            validate: numeric
+        departmentId:
+          type: integer
+          format: int64
+          example: 1
+          x-oapi-codegen-extra-tags:
+            validate: numeric
+        latestContractId:
+          type: integer
+          format: int64
+          example: 1
+          x-oapi-codegen-extra-tags:
+            validate: numeric
+        addressLine1:
+          type: string
+          example: "123 Main St"
+        addressLine2:
+          type: string
+          example: "Apt 4"
+          nullable: true
+        city:
+          type: string
+          example: "Anytown"
+        state:
+          type: string
+          example: "State"
+          nullable: true
+        postalCode:
+          type: string
+          example: "12345"
+          nullable: true
+        country:
+          type: string
+          example: "Country"
+        addressType:
+          type: string
+          example: "residential"
+          default: "residential"
     UserRequest:
       type: object
       required:
@@ -470,6 +589,13 @@ components:
           $ref: "#/components/schemas/AccessTokenResponse"
     JwtPayload:
       type: object
+      required:
+        - id
+        - user_id
+        - email
+        - roles
+        - iat
+        - exp
       properties:
         id:
           type: integer
