--- a/backend/api/openapi/api-v1.yaml
+++ b/backend/api/openapi/api-v1.yaml
@@ -46,6 +46,45 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/BadRequestErrorResponse"
+  /marital-statuses:
+    get:
+      tags:
+        - Marital Statuses
+      summary: List Available Marital Status Options for Forms
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: query
+          name: offset
+          schema:
+            type: integer
+            default: 0
+          description: Page number of the list
+        - in: query
+          name: limit
+          schema:
+            type: integer
+            default: 10
+          description: Number of items per page
+      responses:
+        "200":
+          description: A list of Marital Status Options
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/MultiMaritalStatusesResponse"
+        "401":
+          description: Invalid token/user not authenticated.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/AuthorizationErrorResponse"
+        "400":
+          description: Bad Request.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BadRequestErrorResponse"
   /genders:
     get:
       tags:
@@ -59,13 +98,13 @@ paths:
           schema:
             type: integer
             default: 0
-          description: Page number of the users list
+          description: Page number of the genders list
         - in: query
           name: limit
           schema:
             type: integer
             default: 10
-          description: Number of users per page
+          description: Number of genders per page
       responses:
         "200":
           description: A list of genders
@@ -388,6 +427,15 @@ components:
           example: "s3.amazon.com/myavatar.jpg"
           x-oapi-codegen-extra-tags:
             validate: string
+    MaritalStatusesResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        statusName:
+          type: string
+          example: Male
     GenderResponse:
       type: object
       properties:
@@ -543,6 +591,19 @@ components:
           example: success
         data:
           $ref: "#/components/schemas/UserResponse"
+    MultiMaritalStatusesResponse:
+      type: object
+      properties:
+        status:
+          type: integer
+          example: 200
+        message:
+          type: string
+          example: success
+        data:
+          type: array
+          items:
+            $ref: "#/components/schemas/MaritalStatusesResponse"
     MultiGendersResponse:
       type: object
       properties:
