--- a/backend/api/openapi/api-v1.yaml
+++ b/backend/api/openapi/api-v1.yaml
@@ -14,6 +14,45 @@ servers:
   - url: http://localhost:8080/api/v1
     description: dev url
 paths:
+  /users/statuses:
+    get:
+      tags:
+        - User Statuses
+      summary: Get all user statuses
+      security:
+        - bearerAuth: ["Administrator"]
+      parameters:
+        - in: query
+          name: offset
+          schema:
+            type: integer
+            default: 0
+          description: Page number of the list
+        - in: query
+          name: limit
+          schema:
+            type: integer
+            default: 10
+          description: Number of items per page
+      responses:
+        "200":
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/MultiUserStatusesResponse"
+        "401":
+          description: Not Authorized.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/AuthorizationErrorResponse"
+        "400":
+          description: Validation Errors.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BadRequestErrorResponse"
   /profiles:
     put:
       tags:
@@ -427,6 +466,15 @@ components:
           example: "s3.amazon.com/myavatar.jpg"
           x-oapi-codegen-extra-tags:
             validate: string
+    UserStatusesResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        statusName:
+          type: string
+          example: Active
     MaritalStatusesResponse:
       type: object
       properties:
@@ -449,6 +497,9 @@ components:
       type: object
       properties:
         id:
+          type: integer
+          format: int64
+        profileId:
           type: integer
           format: int64
         username:
@@ -591,6 +642,19 @@ components:
           example: success
         data:
           $ref: "#/components/schemas/UserResponse"
+    MultiUserStatusesResponse:
+      type: object
+      properties:
+        status:
+          type: integer
+          example: 200
+        message:
+          type: string
+          example: success
+        data:
+          type: array
+          items:
+            $ref: "#/components/schemas/UserStatusesResponse"
     MultiMaritalStatusesResponse:
       type: object
       properties:
