--- a/backend/api/openapi/api-v1.yaml
+++ b/backend/api/openapi/api-v1.yaml
@@ -14,6 +14,76 @@ servers:
   - url: http://localhost:8080/api/v1
     description: dev url
 paths:
+  /departments:
+    post:
+      tags:
+        - Departments
+      summary: Create a Department
+      security:
+        - bearerAuth: ["Administrator"]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CreateDepartmentRequest"
+      responses:
+        "201":
+          description: Created Department
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/DepartmentsResponse"
+        "401":
+          description: Not Authorized.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/AuthorizationErrorResponse"
+        "400":
+          description: Validation Errors.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BadRequestErrorResponse"
+    get:
+      tags:
+        - Departments
+      summary: Get all Departments
+      security:
+        - bearerAuth: ["Administrator", "Manager"]
+      parameters:
+        - in: query
+          name: offset
+          schema:
+            type: integer
+            default: 0
+          description: Page number of the list
+        - in: query
+          name: limit
+          schema:
+            type: integer
+            default: 10
+          description: Number of items per page
+      responses:
+        "200":
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/MultiDepartmentsResponse"
+        "401":
+          description: Not Authorized.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/AuthorizationErrorResponse"
+        "400":
+          description: Validation Errors.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BadRequestErrorResponse"
   /users/statuses:
     get:
       tags:
@@ -466,6 +536,15 @@ components:
           example: "s3.amazon.com/myavatar.jpg"
           x-oapi-codegen-extra-tags:
             validate: string
+    DepartmentsResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        departmentName:
+          type: string
+          example: Human Resources
     UserStatusesResponse:
       type: object
       properties:
@@ -642,6 +721,19 @@ components:
           example: success
         data:
           $ref: "#/components/schemas/UserResponse"
+    MultiDepartmentsResponse:
+      type: object
+      properties:
+        status:
+          type: integer
+          example: 200
+        message:
+          type: string
+          example: success
+        data:
+          type: array
+          items:
+            $ref: "#/components/schemas/DepartmentsResponse"
     MultiUserStatusesResponse:
       type: object
       properties:
@@ -713,6 +805,16 @@ components:
           example: success
         data:
           $ref: "#/components/schemas/AccessTokenResponse"
+    CreateDepartmentRequest:
+      type: object
+      required:
+        - departmentName
+      properties:
+        departmentName:
+          type: string
+          example: Human Resources
+          x-oapi-codegen-extra-tagsx-oapi-codegen-extra-tags:
+            validate: string
     JwtPayload:
       type: object
       required:
